--- a/goodmen-logistics/frontend/src/app/components/user-create/user-create.component.html
+++ b/goodmen-logistics/frontend/src/app/components/user-create/user-create.component.html
@@ -2,8 +2,21 @@
   <h2>Create User</h2>
   <form (ngSubmit)="createUser()">
     <div>
+      <label for="userCreateFirstName">First Name:</label>
+      <input id="userCreateFirstName" [(ngModel)]="firstName" name="firstName" />
+    </div>
+    <div>
+      <label for="userCreateLastName">Last Name:</label>
+      <input id="userCreateLastName" [(ngModel)]="lastName" name="lastName" />
+    </div>
+    <div>
+      <label for="userCreateEmail">Email:</label>
+      <input id="userCreateEmail" [(ngModel)]="email" name="email" type="email" />
+    </div>
+    <div>
       <label for="userCreateUsername">Username:</label>
-      <input id="userCreateUsername" [(ngModel)]="username" name="username" required />
+      <input id="userCreateUsername" [(ngModel)]="username" name="username" placeholder="Auto: first.last" />
+      <small *ngIf="!username && generatedUsername">Suggested: {{ generatedUsername }}</small>
     </div>
     <div>
       <label for="userCreatePassword">Password:</label>
