--- a/goodmen-logistics/frontend/src/app/components/vehicles/vehicle-form/vehicle-form.component.html
+++ b/goodmen-logistics/frontend/src/app/components/vehicles/vehicle-form/vehicle-form.component.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
       <h2 class="modal-title">
         <span aria-hidden="true">🚛</span>
-        {{ isEditMode ? 'Edit Vehicle' : 'Add New Vehicle' }}
+        {{ isEditMode ? 'Edit ' + formTitle : 'Add New ' + formTitle }}
       </h2>
       <button class="close-btn" (click)="onClose()" type="button" aria-label="Close modal">
         ✕
